k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-backend
  template:
    metadata:
      labels:
        app: money-backend
    spec:
      containers:
      - name: backend
        image: abhi7dev/money-manager-backend:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: money-backend-service
spec:
  selector:
    app: money-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
