k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-frontend
  template:
    metadata:
      labels:
        app: money-frontend
    spec:
      containers:
      - name: frontend
        image: abhi7dev/money-manager-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: money-frontend-service
spec:
  selector:
    app: money-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
